transpiler/src/snapshots/scribe__parser__tests__parse_function_call.snap
---
source: src/parser.rs
assertion_line: 360
expression: "parse_to_tree(\"add(1,2)\")"

---
AST
└╼ add(unknown, unknown): 
  ├╼ 1:unknown
  └╼ 2:unknown
