transpiler/src/snapshots/scribe__parser__tests__parse_function_def.snap
---
source: src/parser.rs
assertion_line: 415
expression: "parse_to_tree(\"\n            function allocate_unbounded() -> memPtr {\n                memPtr := mload(64)\n            }\")"

---
AST
└╼ function definition - allocate_unbounded
  ├╼ params
  ├╼ returns
  │ └╼ var - memPtr
  └╼ body
    └╼ assign - memPtr
      └╼ mload()
        └╼ 64
