transpiler/src/snapshots/scribe__parser__tests__parse_function_def_with_return.snap
---
source: src/parser.rs
assertion_line: 488
expression: "parse_to_tree(\"\n            function allocate_unbounded() -> memPtr {\n                memPtr := mload(64)\n            }\")"

---
AST
└╼ function definition - allocate_unbounded
  ├╼ params
  ├╼ returns
  │ └╼ memPtr:u256
  └╼ body
    └╼ assign - memPtr:u256
      └╼ mload(u256): u256
        └╼ 64:u256
