transpiler/src/snapshots/scribe__parser__tests__parse_function_def_without_return.snap
---
source: src/parser.rs
assertion_line: 467
expression: "parse_to_tree(\"\n            function allocate_unbounded()  {\n                let memPtr := mload(64)\n            }\")"

---
AST
└╼ function definition - allocate_unbounded
  ├╼ params
  ├╼ returns
  └╼ body
    └╼ declare - memPtr:u32
      └╼ mload(u32): u32
        └╼ 64:u32
