transpiler/src/snapshots/scribe__parser__tests__parse_if.snap
---
source: src/parser.rs
assertion_line: 260
expression: "parse_to_tree(\"\n            if lt(i, 2) {\n               mstore(i, 1)\n            }\")"

---
AST
└╼ if statement
  └╼ conditional
    ├╼ lt()
    │ ├╼ var - i
    │ └╼ 2
    └╼ mstore()
      ├╼ var - i
      └╼ 1
