transpiler/src/snapshots/scribe__parser__tests__parse_switch_statement.snap
---
source: src/parser.rs
assertion_line: 506
expression: "parse_to_tree(\"\n            let x := 5\n            let y := 8\n            switch x\n                case 3 {\n                    y := 5\n                }\n                case 5 {\n                    y := 12\n                    let z := 15\n                }\n                case 8 {\n                    y := 15\n                }\n            y\")"

---
AST
├╼ declare - x:u32
│ └╼ 5:u32
├╼ declare - y:u32
│ └╼ 8:u32
├╼ switch
│ ├╼ var - x:u32
│ ├╼ case
│ │ └╼ assign - y:u32
│ │   └╼ 5:u32
│ ├╼ case
│ │ ├╼ assign - y:u32
│ │ │ └╼ 12:u32
│ │ └╼ declare - z:u32
│ │   └╼ 15:u32
│ └╼ case
│   └╼ assign - y:u32
│     └╼ 15:u32
└╼ var - y:u32
