transpiler/src/snapshots/scribe__parser__tests__parse_var_and_add.snap
---
source: src/parser.rs
assertion_line: 396
expression: "parse_to_tree(\"let x := add(1,2)\")"

---
AST
└╼ declare - x:u256
  └╼ add(u256, u256): u256
    ├╼ 1:u256
    └╼ 2:u256
