transpiler/src/snapshots/scribe__parser__tests__parse_var_declaration.snap
---
source: src/parser.rs
assertion_line: 338
expression: "parse_to_tree(\"let x := 1\n            let y := 2\")"

---
AST
├╼ declare - x:u32
│ └╼ 1:u32
└╼ declare - y:u32
  └╼ 2:u32
