transpiler/src/snapshots/scribe__parser__tests__parse_var_declaration_with_types.snap
---
source: src/parser.rs
assertion_line: 346
expression: "parse_to_tree(\"let x:u32 := 1\n            let y:u256 := 2\n            let z := 2\n            \")"

---
AST
├╼ declare - x:u32
│ └╼ 1:u32
├╼ declare - y:u256
│ └╼ 2:u256
└╼ declare - z:u32
  └╼ 2:u32
